Implement a quotes system! try it with m!quote